Set up navigation and basic Controller layout for index, profile, and edit templates

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -22,6 +22,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a th:href="@{/viewCalendar}">View Calendar</a></li>
+                <li><a th:href="@{/profile}">Profile</a></li>
                 <li><a th:href="@{/edit}">Edit</a></li>
             </ul>
         </div>
