Upadted the calendar view to have buttons instead of 1's & show a popup when clicked

--- a/src/main/resources/templates/calendarTest.html
+++ b/src/main/resources/templates/calendarTest.html
@@ -36,25 +36,23 @@
         </tr>
         <!--eventaully going to be a fragment TODO:create Dynamic fragment for population-->
         <tr class="weekday">
-            <td>1</td>
-            <td>1</td>
-            <td>1</td>
-            <td>1</td>
-            <td>1</td>
-            <td>1</td>
-            <td>1</td>
+            <td> <div th:replace="fragments :: popupBox"></div></td>
+            <td> <div th:replace="fragments :: popupBox"></div></td>
+            <td> <div th:replace="fragments :: popupBox"></div></td>
+            <td> <div th:replace="fragments :: popupBox"></div></td>
+            <td> <div th:replace="fragments :: popupBox"></div></td>
+            <td> <div th:replace="fragments :: popupBox"></div></td>
+            <td> <div th:replace="fragments :: popupBox"></div></td>
         </tr>
         <tr class="weekday">
-            <td>1</td>
-            <td>1</td>
-            <td>1</td>
-            <td>1</td>
-            <td>1</td>
-            <td>1</td>
-            <td>1</td>
+            <td> <div th:replace="fragments :: popupBox"></div></td>
+            <td> <div th:replace="fragments :: popupBox"></div></td>
+            <td> <div th:replace="fragments :: popupBox"></div></td>
+            <td> <div th:replace="fragments :: popupBox"></div></td>
+            <td> <div th:replace="fragments :: popupBox"></div></td>
+            <td> <div th:replace="fragments :: popupBox"></div></td>
         </tr>
     </table>
-<div>
 
 </body>
 </html>
