--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -37,6 +37,21 @@
 
 </div>
 
+<!--Popup box-->
+<div th:fragment="popupBox">
+    <div class="box">
+        <a class="button" href="#popup1">Name</a>
+    </div>
+    <div id="popup1" class="overlay">
+        <div class="popup">
+            <h2>Name</h2>
+            <a class="close" href="#">&times;</a>
+            <div class="content">
+               Description La la la de da.
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
